RESOLVED FIXED191693
Regression(r238215) WKProcessPool.WarmInitialProcess API test is failing
https://bugs.webkit.org/show_bug.cgi?id=191693
Summary Regression(r238215) WKProcessPool.WarmInitialProcess API test is failing
Chris Dumez
Reported 2018-11-15 08:47:17 PST
WKProcessPool.WarmInitialProcess API test is failing since r238215: > TestWebKitAPI.WKProcessPool.InitialWarmedProcessUsed > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:62 > Value of: [pool _hasPrewarmedWebProcess] > Actual: false > Expected: true > > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:63 > Expected equality of these values: > 1U > Which is: 1 > [pool _webPageContentProcessCount] > Which is: 0 > > > TestWebKitAPI.WKProcessPool.WarmInitialProcess > > > /Volumes/Data/slave/sierra-release/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessPreWarming.mm:47 > Value of: [pool _hasPrewarmedWebProcess] > Actual: false > Expected: true
Attachments
Patch (5.06 KB, patch)
2018-11-15 08:52 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-11-15 08:52:29 PST
WebKit Commit Bot
Comment 2 2018-11-15 13:53:52 PST
Comment on attachment 354938 [details] Patch Clearing flags on attachment: 354938 Committed r238248: <https://trac.webkit.org/changeset/238248>
WebKit Commit Bot
Comment 3 2018-11-15 13:53:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-11-15 13:54:27 PST
Note You need to log in before you can comment on or make changes to this bug.