Regression(r238215) WKProcessPool.WarmInitialProcess API test is failing https://bugs.webkit.org/show_bug.cgi?id=191693

Reviewed by Alex Christensen.

Allow *explicit* process prewarming to construct the default data store if necessary or we would
not be obeying the client's request. Only automatic process prewarming should avoid constructing
the default data store unnecessarily to avoid causing memory regressions.

* UIProcess/API/C/WKContext.cpp:
(WKContextWarmInitialProcess):
* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _warmInitialProcess]):
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::prewarmProcess):
(WebKit::WebProcessPool::didReachGoodTimeToPrewarm):
* UIProcess/WebProcessPool.h:
(WebKit::WebProcessPool::sendToOneProcess):


Canonical link: https://commits.webkit.org/206448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238248 268f45cc-cd09-0410-ab3c-d52691b4dbfc